Fix firefox/IE button letter spacing;

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -31,6 +31,7 @@
   cursor: pointer;
   text-decoration: none;
   margin-right: 6px;
+  letter-spacing: 0;
 
   &:last-child {
     margin-right: 0;
